Updated app with real-time random stations display, added real-time stations map and a check-in map to locate users and stations close by, and also added a contact page with a form

--- a/Oslo Bike App/templates/views/contact.hbs
+++ b/Oslo Bike App/templates/views/contact.hbs
@@ -40,6 +40,31 @@
 
       <h1>{{>header}}</h1>
 
+
+      <div class="jumbotron">
+        <h5 class="display-4">Reach Us</h5>
+        <p class="lead">You can reach us via this platform.</p>
+        <hr class="my-2">
+        <p>If you have any questions, complaints and information about <a href="#">OSLO CITY BIKE</a>
+          and you want to leave us a feedback – don’t hesitate to contact us.</p>
+        <a class="btn btn-success btn-lg" href="#" role="button">More Info</a>
+    </div>
+    <form class="border p-5">
+      <div class="form-group">
+        <label for="exampleInputName1" class="text-muted">Your Name (required)</label>
+        <input type="text" class="form-control" id="exampleInputName1" aria-describedby="emailHelp">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1" class="text-muted">Your Email (required)</label>
+        <input type="Email" class="form-control" id="exampleInputEmail1">
+      </div>
+      <div class="form-group">
+        <label for="validationTextarea" class="text-muted">Your Message</label>
+        <textarea class="form-control" rows="16" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-outline-success">Submit</button>
+    </form>
+
       <footer class="container py-5 mt-auto py-md-5 border-top">
       <div class="row">
         <div class="col-6 col-md-3 pt-5">
