--- a/Oslo Bike App/templates/views/home.hbs
+++ b/Oslo Bike App/templates/views/home.hbs
@@ -49,7 +49,7 @@
             <p class="">Number of available bikes:  <span id="bike"></span></p>
             <p class="">Number of free spaces to dock:  <span id="dock"></span></p>
             <p class="">Station ID:  <span id="station_ID"></span></p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/stations" role="button">Open Map</a>
+            <a class="btn btn-success btn-md rounded-pill" href="/stations" role="button">Open Map</a>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
             <p class="">Number of available bikes:  <span id="bike1"></span></p>
             <p class="">Number of free spaces to dock:  <span id="dock1"></span></p>
             <p class="">Station ID:  <span id="station_ID1"></span></p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/stations" role="button">Open Map</a>
+            <a class="btn btn-success btn-md rounded-pill" href="/stations" role="button">Open Map</a>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
             <p class="">Number of available bikes:  <span id="bike2"></span></p>
             <p class="">Number of free spaces to dock:  <span id="dock2"></span></p>
             <p class="">Station ID:  <span id="station_ID2"></span></p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/stations" role="button">Open Map</a>
+            <a class="btn btn-success btn-md rounded-pill" href="/stations" role="button">Open Map</a>
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
             <p class="">Number of available bikes:  <span id="bike3"></span></p>
             <p class="">Number of free spaces to dock:  <span id="dock3"></span></p>
             <p class="">Station ID:  <span id="station_ID3"></span></p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/stations" role="button">Open Map</a>
+            <a class="btn btn-success btn-md rounded-pill" href="/stations" role="button">Open Map</a>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
             <p class="">Number of available bikes:  <span id="bike4"></span></p>
             <p class="">Number of free spaces to dock:  <span id="dock4"></span></p>
             <p class="">Station ID:  <span id="station_ID4"></span></p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/stations" role="button">Open Map</a>
+            <a class="btn btn-success btn-md rounded-pill" href="/stations" role="button">Open Map</a>
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
             <p class="">Number of available bikes:  <span id="bike5"></span></p>
             <p class="">Number of free spaces to dock:  <span id="dock5"></span></p>
             <p class="">Station ID:  <span id="station_ID5"></span></p>
-            <a class="btn btn-primary btn-lg rounded-pill" href="/stations" role="button">Open Map</a>
+            <a class="btn btn-success btn-md rounded-pill" href="/stations" role="button">Open Map</a>
           </div>
         </div>
       </div>
