Updated search button and cleaned code

--- a/Oslo Bike App/templates/views/contact.hbs
+++ b/Oslo Bike App/templates/views/contact.hbs
@@ -122,6 +122,15 @@
           <small>Made with <i class="fas fa-heart text-danger"></i> in Norway</small></div>
         </div>
     </footer>
+    <script type="text/javascript">
+      const searchButton=document.querySelector('form');
+      const searchInput=document.querySelector('input');
+      searchButton.addEventListener('submit', async (event) => {
+      event.preventDefault()
+      //console.log(searchInput.value)
+    }
+  )
+    </script>
       
     </div>
 
